Added hover effects on sidebar items, more design refining

--- a/panay-app/scss/style.css
+++ b/panay-app/scss/style.css
@@ -3480,8 +3480,8 @@ textarea.form-control-lg {
   --bs-nav-link-padding-x: 1rem;
   --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-font-weight: ;
-  --bs-nav-link-color: var(--bs-link-color);
-  --bs-nav-link-hover-color: var(--bs-link-hover-color);
+  --bs-nav-link-color: #E6E6E6;
+  --bs-nav-link-hover-color: white;
   --bs-nav-link-disabled-color: #6c757d;
   display: flex;
   flex-wrap: wrap;
