add delete branch

--- a/server/views/login.html
+++ b/server/views/login.html
@@ -17,7 +17,8 @@
             <button class="btn" type="submit">Log In</button>
         </div>
     </form>
-    <br><br><br><br>
+    <br><br>
+    <hr><br><br>
     <form action="/signup" method="POST">
         <div class="form-field">
             <input placeholder="name" required name="name" />
@@ -30,6 +31,16 @@
         </div>
         <div class="form-field">
             <button class="btn" type="submit">Sign Up</button>
+        </div>
+    </form>
+    <br><br>
+    <hr><br><br>
+    <form action="/deletebranch" method="POST">
+        <div class="form-field">
+            <input placeholder="name" required name="name" />
+        </div>
+        <div class="form-field">
+            <button class="btn" type="submit">Delete</button>
         </div>
     </form>
 
