fix isadmin to default false

--- a/server/views/login.html
+++ b/server/views/login.html
@@ -27,7 +27,7 @@
             <input type="password" placeholder="password" required name="password" />
         </div>
         <div class="form-field">
-            <input placeholder="isadmin" required name="isadmin" />
+            <input placeholder="isadmin" name="isadmin" />
         </div>
         <div class="form-field">
             <button class="btn" type="submit">Sign Up</button>
