redid sales and expense view selection

--- a/panay-app/scss/style.scss
+++ b/panay-app/scss/style.scss
@@ -11,6 +11,7 @@ $theme-colors: (
 
 $nav-link-color: #E6E6E6;
 $nav-link-hover-color: white;
+$nav-tabs-link-active-bg: white;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
