cleaned up design

--- a/panay-app/scss/style.css
+++ b/panay-app/scss/style.css
@@ -30,11 +30,17 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #783028;
-  --bs-secondary: #FFFCF5;
+  --bs-secondary: #976d1e;
+  --bs-bgdefault: #FFFCF5;
   --bs-primaryhover: #CC7066;
+  --bs-danger: #dc3545;
+  --bs-cancel: #6c757d;
   --bs-primary-rgb: 120, 48, 40;
-  --bs-secondary-rgb: 255, 252, 245;
+  --bs-secondary-rgb: 151, 109, 30;
+  --bs-bgdefault-rgb: 255, 252, 245;
   --bs-primaryhover-rgb: 204, 112, 102;
+  --bs-danger-rgb: 220, 53, 69;
+  --bs-cancel-rgb: 108, 117, 125;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -2903,6 +2909,23 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #976d1e;
+  --bs-btn-border-color: #976d1e;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #805d1a;
+  --bs-btn-hover-border-color: #795718;
+  --bs-btn-focus-shadow-rgb: 167, 131, 64;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #795718;
+  --bs-btn-active-border-color: #715217;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #976d1e;
+  --bs-btn-disabled-border-color: #976d1e;
+}
+
+.btn-bgdefault {
   --bs-btn-color: #000;
   --bs-btn-bg: #FFFCF5;
   --bs-btn-border-color: #FFFCF5;
@@ -2936,6 +2959,40 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #CC7066;
 }
 
+.btn-danger {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #dc3545;
+  --bs-btn-border-color: #dc3545;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #bb2d3b;
+  --bs-btn-hover-border-color: #b02a37;
+  --bs-btn-focus-shadow-rgb: 225, 83, 97;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #b02a37;
+  --bs-btn-active-border-color: #a52834;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #dc3545;
+  --bs-btn-disabled-border-color: #dc3545;
+}
+
+.btn-cancel {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #6c757d;
+  --bs-btn-border-color: #6c757d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #5c636a;
+  --bs-btn-hover-border-color: #565e64;
+  --bs-btn-focus-shadow-rgb: 130, 138, 145;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #565e64;
+  --bs-btn-active-border-color: #51585e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #6c757d;
+  --bs-btn-disabled-border-color: #6c757d;
+}
+
 .btn-outline-primary {
   --bs-btn-color: #783028;
   --bs-btn-border-color: #783028;
@@ -2954,6 +3011,23 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
+  --bs-btn-color: #976d1e;
+  --bs-btn-border-color: #976d1e;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #976d1e;
+  --bs-btn-hover-border-color: #976d1e;
+  --bs-btn-focus-shadow-rgb: 151, 109, 30;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #976d1e;
+  --bs-btn-active-border-color: #976d1e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #976d1e;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #976d1e;
+  --bs-gradient: none;
+}
+
+.btn-outline-bgdefault {
   --bs-btn-color: #FFFCF5;
   --bs-btn-border-color: #FFFCF5;
   --bs-btn-hover-color: #000;
@@ -2984,6 +3058,40 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #CC7066;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #CC7066;
+  --bs-gradient: none;
+}
+
+.btn-outline-danger {
+  --bs-btn-color: #dc3545;
+  --bs-btn-border-color: #dc3545;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #dc3545;
+  --bs-btn-hover-border-color: #dc3545;
+  --bs-btn-focus-shadow-rgb: 220, 53, 69;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #dc3545;
+  --bs-btn-active-border-color: #dc3545;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #dc3545;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #dc3545;
+  --bs-gradient: none;
+}
+
+.btn-outline-cancel {
+  --bs-btn-color: #6c757d;
+  --bs-btn-border-color: #6c757d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #6c757d;
+  --bs-btn-hover-border-color: #6c757d;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6c757d;
+  --bs-btn-active-border-color: #6c757d;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #6c757d;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #6c757d;
   --bs-gradient: none;
 }
 
@@ -4537,11 +4645,20 @@ textarea.form-control-lg {
 }
 
 .alert-secondary {
+  --bs-alert-color: #5b4112;
+  --bs-alert-bg: #eae2d2;
+  --bs-alert-border-color: #e0d3bc;
+}
+.alert-secondary .alert-link {
+  color: #49340e;
+}
+
+.alert-bgdefault {
   --bs-alert-color: #666562;
   --bs-alert-bg: #fffefd;
   --bs-alert-border-color: #fffefc;
 }
-.alert-secondary .alert-link {
+.alert-bgdefault .alert-link {
   color: #52514e;
 }
 
@@ -4552,6 +4669,24 @@ textarea.form-control-lg {
 }
 .alert-primaryhover .alert-link {
   color: #623631;
+}
+
+.alert-danger {
+  --bs-alert-color: #842029;
+  --bs-alert-bg: #f8d7da;
+  --bs-alert-border-color: #f5c2c7;
+}
+.alert-danger .alert-link {
+  color: #6a1a21;
+}
+
+.alert-cancel {
+  --bs-alert-color: #41464b;
+  --bs-alert-bg: #e2e3e5;
+  --bs-alert-border-color: #d3d6d8;
+}
+.alert-cancel .alert-link {
+  color: #34383c;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -4869,14 +5004,28 @@ textarea.form-control-lg {
 }
 
 .list-group-item-secondary {
+  color: #5b4112;
+  background-color: #eae2d2;
+}
+.list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
+  color: #5b4112;
+  background-color: #d3cbbd;
+}
+.list-group-item-secondary.list-group-item-action.active {
+  color: #fff;
+  background-color: #5b4112;
+  border-color: #5b4112;
+}
+
+.list-group-item-bgdefault {
   color: #666562;
   background-color: #fffefd;
 }
-.list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
+.list-group-item-bgdefault.list-group-item-action:hover, .list-group-item-bgdefault.list-group-item-action:focus {
   color: #666562;
   background-color: #e6e5e4;
 }
-.list-group-item-secondary.list-group-item-action.active {
+.list-group-item-bgdefault.list-group-item-action.active {
   color: #fff;
   background-color: #666562;
   border-color: #666562;
@@ -4894,6 +5043,34 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #7a433d;
   border-color: #7a433d;
+}
+
+.list-group-item-danger {
+  color: #842029;
+  background-color: #f8d7da;
+}
+.list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
+  color: #842029;
+  background-color: #dfc2c4;
+}
+.list-group-item-danger.list-group-item-action.active {
+  color: #fff;
+  background-color: #842029;
+  border-color: #842029;
+}
+
+.list-group-item-cancel {
+  color: #41464b;
+  background-color: #e2e3e5;
+}
+.list-group-item-cancel.list-group-item-action:hover, .list-group-item-cancel.list-group-item-action:focus {
+  color: #41464b;
+  background-color: #cbccce;
+}
+.list-group-item-cancel.list-group-item-action.active {
+  color: #fff;
+  background-color: #41464b;
+  border-color: #41464b;
 }
 
 .btn-close {
@@ -6461,6 +6638,11 @@ textarea.form-control-lg {
 }
 
 .text-bg-secondary {
+  color: #fff !important;
+  background-color: RGBA(151, 109, 30, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-bgdefault {
   color: #000 !important;
   background-color: RGBA(255, 252, 245, var(--bs-bg-opacity, 1)) !important;
 }
@@ -6468,6 +6650,16 @@ textarea.form-control-lg {
 .text-bg-primaryhover {
   color: #000 !important;
   background-color: RGBA(204, 112, 102, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-danger {
+  color: #fff !important;
+  background-color: RGBA(220, 53, 69, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-cancel {
+  color: #fff !important;
+  background-color: RGBA(108, 117, 125, var(--bs-bg-opacity, 1)) !important;
 }
 
 .link-primary {
@@ -6478,9 +6670,16 @@ textarea.form-control-lg {
 }
 
 .link-secondary {
-  color: #FFFCF5 !important;
+  color: #976d1e !important;
 }
 .link-secondary:hover, .link-secondary:focus {
+  color: #795718 !important;
+}
+
+.link-bgdefault {
+  color: #FFFCF5 !important;
+}
+.link-bgdefault:hover, .link-bgdefault:focus {
   color: #fffdf7 !important;
 }
 
@@ -6489,6 +6688,20 @@ textarea.form-control-lg {
 }
 .link-primaryhover:hover, .link-primaryhover:focus {
   color: #d68d85 !important;
+}
+
+.link-danger {
+  color: #dc3545 !important;
+}
+.link-danger:hover, .link-danger:focus {
+  color: #b02a37 !important;
+}
+
+.link-cancel {
+  color: #6c757d !important;
+}
+.link-cancel:hover, .link-cancel:focus {
+  color: #565e64 !important;
 }
 
 .ratio {
@@ -6935,9 +7148,24 @@ textarea.form-control-lg {
   border-color: rgba(var(--bs-secondary-rgb), var(--bs-border-opacity)) !important;
 }
 
+.border-bgdefault {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-bgdefault-rgb), var(--bs-border-opacity)) !important;
+}
+
 .border-primaryhover {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-primaryhover-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-danger {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-danger-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-cancel {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-cancel-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-white {
@@ -7772,9 +8000,24 @@ textarea.form-control-lg {
   color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-bgdefault {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-bgdefault-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-primaryhover {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primaryhover-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-danger {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-danger-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-cancel {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-cancel-rgb), var(--bs-text-opacity)) !important;
 }
 
 .text-black {
@@ -7838,9 +8081,24 @@ textarea.form-control-lg {
   background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
 }
 
+.bg-bgdefault {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-bgdefault-rgb), var(--bs-bg-opacity)) !important;
+}
+
 .bg-primaryhover {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-primaryhover-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-danger {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-cancel {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-cancel-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
