--- a/panay-app/scss/style.scss
+++ b/panay-app/scss/style.scss
@@ -5,7 +5,7 @@
 
 $theme-colors: (
   "primary": #783028,
-  "secondary": #976d1e,
+  "secondary": #e09d21,
   "bgdefault": #FFFCF5,
   "primaryhover": #CC7066,
   "danger": #dc3545,
