edited sale color

--- a/panay-app/scss/style.scss
+++ b/panay-app/scss/style.scss
@@ -10,7 +10,7 @@ $theme-colors: (
   "primaryhover": #CC7066,
   "danger": #dc3545,
   "cancel": #6c757d,
-  "sale": #18481D,
+  "sale": #2b7232,
   "expense": #BA090F
 );
 
