--- a/panay-app/scss/style.css
+++ b/panay-app/scss/style.css
@@ -43,7 +43,7 @@ body,
   --bs-primaryhover: #CC7066;
   --bs-danger: #dc3545;
   --bs-cancel: #6c757d;
-  --bs-sale: #18481D;
+  --bs-sale: #2b7232;
   --bs-expense: #BA090F;
   --bs-primary-rgb: 120, 48, 40;
   --bs-secondary-rgb: 224, 157, 33;
@@ -51,7 +51,7 @@ body,
   --bs-primaryhover-rgb: 204, 112, 102;
   --bs-danger-rgb: 220, 53, 69;
   --bs-cancel-rgb: 108, 117, 125;
-  --bs-sale-rgb: 24, 72, 29;
+  --bs-sale-rgb: 43, 114, 50;
   --bs-expense-rgb: 186, 9, 15;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
@@ -3007,19 +3007,19 @@ textarea.form-control-lg {
 
 .btn-sale {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #18481D;
-  --bs-btn-border-color: #18481D;
+  --bs-btn-bg: #2b7232;
+  --bs-btn-border-color: #2b7232;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #143d19;
-  --bs-btn-hover-border-color: #133a17;
-  --bs-btn-focus-shadow-rgb: 59, 99, 63;
+  --bs-btn-hover-bg: #25612b;
+  --bs-btn-hover-border-color: #225b28;
+  --bs-btn-focus-shadow-rgb: 75, 135, 81;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #133a17;
-  --bs-btn-active-border-color: #123616;
+  --bs-btn-active-bg: #225b28;
+  --bs-btn-active-border-color: #205626;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #18481D;
-  --bs-btn-disabled-border-color: #18481D;
+  --bs-btn-disabled-bg: #2b7232;
+  --bs-btn-disabled-border-color: #2b7232;
 }
 
 .btn-expense {
@@ -3142,19 +3142,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-sale {
-  --bs-btn-color: #18481D;
-  --bs-btn-border-color: #18481D;
+  --bs-btn-color: #2b7232;
+  --bs-btn-border-color: #2b7232;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #18481D;
-  --bs-btn-hover-border-color: #18481D;
-  --bs-btn-focus-shadow-rgb: 24, 72, 29;
+  --bs-btn-hover-bg: #2b7232;
+  --bs-btn-hover-border-color: #2b7232;
+  --bs-btn-focus-shadow-rgb: 43, 114, 50;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #18481D;
-  --bs-btn-active-border-color: #18481D;
+  --bs-btn-active-bg: #2b7232;
+  --bs-btn-active-border-color: #2b7232;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #18481D;
+  --bs-btn-disabled-color: #2b7232;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #18481D;
+  --bs-btn-disabled-border-color: #2b7232;
   --bs-gradient: none;
 }
 
@@ -4770,12 +4770,12 @@ textarea.form-control-lg {
 }
 
 .alert-sale {
-  --bs-alert-color: #0e2b11;
-  --bs-alert-bg: #d1dad2;
-  --bs-alert-border-color: #bac8bb;
+  --bs-alert-color: #1a441e;
+  --bs-alert-bg: #d5e3d6;
+  --bs-alert-border-color: #bfd5c2;
 }
 .alert-sale .alert-link {
-  color: #0b220e;
+  color: #153618;
 }
 
 .alert-expense {
@@ -5172,17 +5172,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-sale {
-  color: #0e2b11;
-  background-color: #d1dad2;
+  color: #1a441e;
+  background-color: #d5e3d6;
 }
 .list-group-item-sale.list-group-item-action:hover, .list-group-item-sale.list-group-item-action:focus {
-  color: #0e2b11;
-  background-color: #bcc4bd;
+  color: #1a441e;
+  background-color: #c0ccc1;
 }
 .list-group-item-sale.list-group-item-action.active {
   color: #fff;
-  background-color: #0e2b11;
-  border-color: #0e2b11;
+  background-color: #1a441e;
+  border-color: #1a441e;
 }
 
 .list-group-item-expense {
@@ -6790,7 +6790,7 @@ textarea.form-control-lg {
 
 .text-bg-sale {
   color: #fff !important;
-  background-color: RGBA(24, 72, 29, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(43, 114, 50, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-expense {
@@ -6841,10 +6841,10 @@ textarea.form-control-lg {
 }
 
 .link-sale {
-  color: #18481D !important;
+  color: #2b7232 !important;
 }
 .link-sale:hover, .link-sale:focus {
-  color: #133a17 !important;
+  color: #225b28 !important;
 }
 
 .link-expense {
