--- a/panay-app/scss/style.scss
+++ b/panay-app/scss/style.scss
@@ -9,6 +9,7 @@ $theme-colors: (
   "bgdefault": #FFFCF5,
   "primaryhover": #CC7066,
   "danger": #dc3545,
+  "success": #198754,
   "cancel": #6c757d,
   "sale": #2b7232,
   "expense": #BA090F
