--- a/panay-app/scss/style.scss
+++ b/panay-app/scss/style.scss
@@ -22,10 +22,14 @@ $nav-tabs-link-active-bg: white;
 html,
 body,
 #app {
-  height: 100%;
-  min-height: --webkit-fill-available;
-  margin: 0;
+  min-height: calc(100vh - 70px);
+  margin: 0px
+}
 
+body {
+  position: relative;
+  /* Sum of heights for footer and nav */
+  padding-bottom: 70px;
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
